--- a/NCOM_WebSite/Layout.master
+++ b/NCOM_WebSite/Layout.master
@@ -2,28 +2,34 @@
 
 <!DOCTYPE html>
 
-<html lang="en" dir="rtl">
+<html lang="ar">
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - الجمعية الخيرية لإدارة دور الأيتام</title>
+    <title>الجمعية الخيرية لإدارة دور الأيتام - <%: Page.Title %></title>
 
+    <style>
+        html {
+            direction: rtl;
+        }
+
+        body {
+            text-align: right !important;
+        }
+    </style>
     <asp:ContentPlaceHolder id="headContent" runat="server">
     </asp:ContentPlaceHolder>
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/v3.3.4/dist/css/bootstrap-rtl.min.css">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
         <asp:ContentPlaceHolder id="bodyContnet" runat="server">
         
         </asp:ContentPlaceHolder>
-    </div>
     </form>
-    <script src="Scripts/jquery-3.4.1.slim.min.js"></script>"
+    <script src="Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
 </body>
