--- a/NCOM_WebSite/Default.css
+++ b/NCOM_WebSite/Default.css
@@ -8,6 +8,23 @@ img {
     max-height: 850px;
 }
 
+.defenetion {
+    font-size: 28px;
+    padding: 25px 25px 25px 25px;
+    margin: 15px;
+    font-family: 'Cairo', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin: 30px auto;
+}
+
+.all {
+    border: thick;
+    width: 85%;
+    margin: 20px auto;
+}
+
 .items-container {
     display: flex;
     flex-wrap: wrap;
@@ -17,6 +34,7 @@ img {
     width: 85%;
     margin: 20px auto;
 }
+
 
 .items {
     display: block;
