--- a/NCOM_WebSite/Orphanage.css
+++ b/NCOM_WebSite/Orphanage.css
@@ -1,27 +1,59 @@
-﻿.listContainer {
+﻿body {
+    background-color: honeydew;
+}
+
+.list-container {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    width: 80%;
-    margin: 10px auto;
     align-content: center;
+    width: 80%;
+    margin: 25px auto;
 }
 
-.orphanageItem {
+.list-item {
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 10%;
+    align-self: center;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    margin: 15px;
+    padding: 30px;
+    font-size: 18px;
 }
 
 .logo {
     display: block;
     width: 150px;
-    height: 150px;
+    height: 100px;
 }
 
-.orphanageName {
+.item-name {
     text-align: center;
     font-size: 32px;
+}
+
+.item-description {
+    display: inline-block;
+    max-width: 750px;
+}
+
+i {
+    margin-right: 5px;
+}
+
+address {
+    text-align: center;
+}
+
+.info {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+iframe {
+    width: 650px;
+    height: 500px;
 }
