--- a/NCOM_WebSite/Style/list.css
+++ b/NCOM_WebSite/Style/list.css
@@ -64,13 +64,12 @@
     margin-right: 5px;
 }
 
-
 hr {
     display: block;
     width: 90%;
     padding: 5px;
 }
 
-input[type=checkbox] {
+input[type=checkbox], i {
     margin: 5px;
 }
