--- a/NCOM_WebSite/Style/form.css
+++ b/NCOM_WebSite/Style/form.css
@@ -45,6 +45,11 @@ form {
         background-color: #c76585
     }
 
+.validation {
+    margin: -10px 50px 15px 15px;
+    color: red;
+}
+
 @media (max-width: 400px) {
     form {
         width: 100%;
