--- a/NCOM_WebSite/Style/Orphanage.css
+++ b/NCOM_WebSite/Style/Orphanage.css
@@ -16,3 +16,10 @@ iframe {
     width: 500px;
     height: 450px;
 }
+
+@media (max-width: 500px) {
+    iframe {
+        width: 90%;
+        height: 85%;
+    }
+}
