--- a/NCOM_WebSite/Style/list.css
+++ b/NCOM_WebSite/Style/list.css
@@ -29,7 +29,7 @@
     align-content: center;
     width: 80%;
     margin: 25px auto;
-    margin-bottom: 25vh;
+    margin-bottom: 20vh;
 }
 
 .list-item {
@@ -55,7 +55,7 @@
 
 .item-description {
     display: block;
-    max-width: 750px;
+    max-width: 600px;
     margin-bottom: 1rem;
 }
 
@@ -72,4 +72,37 @@ hr {
 
 input[type=checkbox], i {
     margin: 5px;
+}
+
+
+@media (max-width: 600px) {
+    .link-list {
+        width: 95%;
+        margin: 15px auto;
+    }
+
+    .link-list-item {
+        margin: 15px;
+        padding: 35px;
+        font-size: 14px;
+    }
+    .list-container {
+        width: 95vw;
+        margin: 15px auto;
+        margin-bottom: 20vh;
+    }
+    .list-item {
+        margin: 15px;
+        padding: 15px;
+        font-size: 18px;
+        min-width: 90%;
+    }
+
+    .item-description {
+        max-width: 90%;
+    }
+
+    .item-name {
+        font-size: 24px;
+    }
 }
