--- a/NCOM_WebSite/Masters/ManagerLayout.master
+++ b/NCOM_WebSite/Masters/ManagerLayout.master
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="PlanManagement.aspx">الحملات</a></li>
             <li><a href="DonationManagement.aspx">التبرعات</a></li>
-            <li id="nav-button"><a href="#">تسجيل خروج</a></li>
+            <li id="nav-button"><a href="Default.aspx">تسجيل خروج</a></li>
         </ul>
     </nav>
     <asp:ContentPlaceHolder ID="bodyContent" runat="server">
